sitemap-url-extractor-tool.html

--- a/sitemap-url-extractor-tool.html
+++ b/sitemap-url-extractor-tool.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Quickly extract all URLs from sitemaps with our Sitemap URL Extractor. Just paste the sitemap and get URLs & keywords with one click for SEO analysis">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="canonical" href="https://keywordsfromurls.com/">
+<link rel="canonical" href="https://keywordsfromurls.com/sitemap-url-extractor-tool.html">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
   
  <!-- Bootstrap JS -->
@@ -387,110 +387,16 @@
   
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2996839415438815"
      crossorigin="anonymous"></script>
-   <script type="application/ld+json">
-    {
-  "@context": "https://schema.org",
-  "@type": "WebApplication",
-  "name": "Keyword Extractor Tool",
-  "url": "https://keywordsfromurls.com/",
-  "description": "Extract relevant keywords from URLs or text with our Keyword Extractor tool. Get keywords instantly and use them for your SEO or content creation needs.",
-  "mainEntityOfPage": "https://keywordsfromurls.com/",
-  "potentialAction": {
-    "@type": "Action",
-    "name": "Extract Keywords",
-    "target": "https://keywordsfromurls.com/",
-    "actionStatus": "ActiveActionStatus"
-  }
-
-</script>
-    <script type="application/ld+json">
-{
-  "@context": "https://schema.org",
-  "@type": "FAQPage",
-  "mainEntity": [
-    {
-      "@type": "Question",
-      "name": "What is the purpose of the Keywords from URLs tool?",
-      "acceptedAnswer": {
-        "@type": "Answer",
-        "text": "The Keywords from URLs tool extracts meaningful keywords from a segment of a URL. It helps you identify relevant keywords for SEO, content creation, or competitive analysis, making it easier to enhance your website's visibility on search engines."
-      }
-    },
-    {
-      "@type": "Question",
-      "name": "How does the Keyword Extractor tool work?",
-      "acceptedAnswer": {
-        "@type": "Answer",
-        "text": "The Keyword Extractor tool works by analyzing a URL and extracting the last meaningful segment of the URL path. It ignores file extensions (e.g., `.html`) and domain names (e.g., `.com`), providing you with precise keywords that you can use to improve your content and SEO strategy."
-      }
-    },
-    {
-      "@type": "Question",
-      "name": "Can I use the Keywords from URLs tool for any URL?",
-      "acceptedAnswer": {
-        "@type": "Answer",
-        "text": "Yes, you can use the Keywords from URLs tool for any valid URL. The tool is designed to handle various types of URLs, including product pages, blog posts, and category pages, making it a versatile tool for extracting keywords from different types of online content."
-      }
-    },
-    {
-      "@type": "Question",
-      "name": "Is it necessary to log in to use the Keyword Extractor tool?",
-      "acceptedAnswer": {
-        "@type": "Answer",
-        "text": "No, you don’t need to log in to use the Keyword Extractor tool. Simply paste the URL into the input field, and the tool will instantly generate the keywords for you without requiring an account or login."
-      }
-    },
-    {
-      "@type": "Question",
-      "name": "How can the Keyword Grouping and Keyword Density tools benefit my SEO strategy?",
-      "acceptedAnswer": {
-        "@type": "Answer",
-        "text": "The Keyword Grouping tool helps you organize keywords into related groups, improving content relevance and targeting. The Keyword Density tool helps you calculate how often certain keywords appear in your content, ensuring optimal keyword usage for better SEO performance. Both tools work together to refine and optimize your content strategy."
-      }
-    }
-  ]
-}
-</script>
-    <script type="application/ld+json">
-    {
-      "@context": "https://schema.org",
-      "@type": "FAQPage",
-      "mainEntity": [
-        {
-          "@type": "Question",
-          "name": "How does the keyword extraction tool work?",
-          "acceptedAnswer": {
-            "@type": "Answer",
-            "text": "When you enter a URL, the tool extracts the primary keyword from it. For example, from https://www.keywordsfromurls.com/, the extracted keyword would be www.keywordsfromurls.com."
-          }
-        },
-        {
-          "@type": "Question",
-          "name": "What keyword is extracted from a URL with multiple segments?",
-          "acceptedAnswer": {
-            "@type": "Answer",
-            "text": "For a URL like https://keywordsfromurls.com/keywordsfromurls/, the keyword extracted would be keywordsfromurls.com."
-          }
-        },
-        {
-          "@type": "Question",
-          "name": "How does the tool handle blog URLs?",
-          "acceptedAnswer": {
-            "@type": "Answer",
-            "text": "If your blog is on Blogger and you provide a URL like https://xyz.blogspot.com/01/01/one-more-second-logic.html, the keyword extracted will be 'one more second logic'."
-          }
-        }
-      ]
-    }
-  </script>
-
+  
+   
+  
  <script type="application/ld+json">
     {
       "@context": "https://schema.org",
       "@type": "WebApplication",
       "name": "Keyword Extraction Tool",
-      "url": "https://www.keywordsfromurls.com/",
-      "description": "A tool to extract keywords from URLs to help organize website data and analyze blog topics.",
+      "url": "https://keywordsfromurls.com/sitemap-url-extractor-tool.html",
+      "description": "A tool to extract url from sitemap to help organize website data and analyze blog topics.",
       "applicationCategory": "Utility",
       "operatingSystem": "All",
       "offers": {
@@ -544,6 +450,13 @@
         </div>
         <div class="keyword-list" id="keywordList"></div>
     </div>
+<p><strong>Sitemap URL Extractor</strong></p>
+<p>This tool extracts URLs from a sitemap and also generates keywords from them.</p>
+
+<p><strong>How Sitemap from URLs Works:</strong></p>
+<p>1. Paste your sitemap XML in the text area.</p>
+<p>2. It will automatically list all URLs.</p>
+<p>3. If you want keywords, click the "Get Keywords" button to extract them from the URLs.</p>
 
     <script>
         document.getElementById('urlInput').addEventListener('paste', function (event) {
@@ -654,16 +567,7 @@
         }
     </script>
         
-<h2>Extract Keywords from URLs to Organize Your Website Data</h2>
-        <p>When organizing your website data and analyzing the topics covered in your blog, it can be useful to extract keywords from your URLs. Our tool helps you do just that. Heres how it works:</p>
-        <ul>
-            <li>If you enter a URL like https://www.keywordsfromurls.com/, the tool extracts the keyword www.keywordsfromurls.com.</li>
-            <li>For a URL such as https://keywordsfromurls.com/keywordsfromurls/, the keyword extracted would be keywordsfromurls.com</li>
-            <li>If your blog is on Blogger and you provide a URL like https://xyz.blogspot.com/01/01/one-more-second-logic.html, the keyword extracted will be one more second logic.</li>
-        </ul>
-        <p>Discover other tools: <a href="keywords-grouping.html">Keyword Grouping Tool</a>, <a href="Slug-Generator.html">Slug Generator</a>, and <a href="Keyword-Density-And-Wordcount-Tool.html">Keyword Density Tool</a>.</p>
 
-    </div>
 
         <div class="share-container">
             <p>Share this tool:</p>
@@ -699,17 +603,7 @@ document.addEventListener('click', (e) => {
   }
 });
             </script>
- <h3>Frequently Asked Questions</h3>
-  <div>
-    <h2>How does the keyword extraction tool work?</h2>
-    <p>When you enter a URL, the tool extracts the primary keyword from it. For example, from <a href="https://www.keywordsfromurls.com/">https://www.keywordsfromurls.com/</a>, the extracted keyword would be <strong>www.keywordsfromurls.com</strong>.</p>
 
-    <h2>What kind of URLs can I use with the tool?</h2>
-    <p>You can use any URL, including personal blogs, websites, and e-commerce links. For example, https://xyz.blogspot.com/01/01/one-more-second-logic.html will extract <strong>one more second logic</strong>.</p>
-
-    <h2>Does the tool work with subdomains?</h2>
-    <p>Yes, the tool works with subdomains. It will identify and extract keywords from both the main domain and subdomain URLs effectively.</p>
-  </div>
      <!-- Footer -->
     <footer class="footer"><div class="left">&copy; 2025 Keywords From Urls | <a href="//www.dmca.com/Protection/Status.aspx?ID=6cf02a5f-5f1e-483c-88f4-70ff117b638f" title="DMCA.com Protection Status" class="dmca-badge"> 
 <img src ="https://images.dmca.com/Badges/dmca_protected_sml_120n.png?ID=6cf02a5f-5f1e-483c-88f4-70ff117b638f"  alt="DMCA.com Protection Status" /></a>
