--- a/keywords-grouping.html
+++ b/keywords-grouping.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Group multiple keywords effortlessly with our Keywords Grouping Tool. Get common and unique keywords separately for better SEO optimization.">
+    <meta name="description" content="Get common and unique keywords separately for better SEO optimization. Group multiple keywords effortlessly with our Keywords Grouping Tool.">
+<link rel="canonical" href="https://keywordsfromurls.com/Keyword-Grouping-Tool.html">
 
    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/boottrap.bundle.min.js"></script>
