--- a/url-encoder-decoder.html
+++ b/url-encoder-decoder.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Quickly encode or decode URLs with our SEO-friendly tool. Optimize links for articles, improve readability, and ensure browser compatibility.">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="canonical" href="https://keywordsfromurls.com/">
+   <link rel="canonical" href="https://keywordsfromurls.com/url-parser-tool.html">
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
   
  <!-- Bootstrap JS -->
