--- a/url-parser-tool.html
+++ b/url-parser-tool.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Easily parse URLs to extract domains, paths, query parameters, and more. Perfect for SEO analysis and optimizing website links.">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="canonical" href="https://keywordsfromurls.com/">
+    <link rel="canonical" href="https://keywordsfromurls.com/url-parser-tool.html">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
   
  <!-- Bootstrap JS -->
