--- a/keywords-grouping.html
+++ b/keywords-grouping.html
@@ -25,12 +25,18 @@
             box-sizing: border-box;
         }
 
-        body {
-            font-family: Arial, sans-serif;
-            line-height: 1.6;
-            color: #333;
-            background-color: #f4f4f9;
-        }
+      body {
+    font-family: Arial, sans-serif;
+    background-color: #f4f7fc;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    box-sizing: border-box;
+    flex-direction: column;
+}
 
      /* Header */
 .header {
@@ -378,13 +384,18 @@
                 width: 100%;
             }
         }
-      .kg-container {
+   
+
+.kg-container {
     width: 90%;
     max-width: 800px;
     background-color: #fff;
     padding: 20px;
     border-radius: 8px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
 .kg-title {
@@ -624,15 +635,8 @@
 </div>
  </nav>
     </header>
- <!-- Main Content -->
-    <main class="main">
-    <a href="Slug-Generator.html" target="_blank">
-        <button>Slug Generator</button>
-    </a>
-    <a href="Keyword-Density-And-Wordcount-Tool.html" target="_blank">
-        <button>Keyword Density</button>
-    </a>
-</div>
+    <br>
+    <br>
   <div class="kg-container">
         <h1 class="kg-title">Keyword Grouping Tool</h1>
         <div class="kg-input-section">
