keywords-grouping.html

--- a/keywords-grouping.html
+++ b/keywords-grouping.html
@@ -18,25 +18,19 @@
     <link rel="icon" type="image/png" sizes="192x192" href="/android-chrome-192x192.png">
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
   <style>
-        /* General Reset */
+         /* General Reset */
         * {
             margin: 0;
             padding: 0;
             box-sizing: border-box;
         }
 
-      body {
-    font-family: Arial, sans-serif;
-    background-color: #f4f7fc;
-    margin: 0;
-    padding: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    box-sizing: border-box;
-    flex-direction: column;
-}
+        body {
+            font-family: Arial, sans-serif;
+            line-height: 1.6;
+            color: #333;
+            background-color: #f4f4f9;
+        }
 
      /* Header */
 .header {
@@ -526,7 +520,33 @@
         padding: 6px 18px;
         font-size: 14px;
     }
-}
+
+    #faq {
+        background-color: #f9f9f9;
+        padding: 40px 20px;
+        margin-top: 50px;
+    }
+    #faq h2 {
+        text-align: center;
+        margin-bottom: 30px;
+    }
+    .faq-item {
+        margin-bottom: 20px;
+    }
+    .faq-item h3 {
+        font-size: 1.2em;
+        color: #333;
+    }
+    .faq-item p {
+        font-size: 1em;
+        color: #666;
+        line-height: 1.6;
+    }
+        /* Dropdown container */
+        .dropdown {
+            position: relative;
+            display: inline-block;
+        }
     </style>
     <script type="application/ld+json">
 {
@@ -614,7 +634,7 @@
 <!-- Event snippet for Page view conversion page --> <script> gtag('event', 'conversion', {'send_to': 'AW-11525935043/y2SxCPHExoMaEMOf__cq'}); </script>
 <body>
    
-    <!-- Header -->
+  <!-- Header -->
     <header class="header">
         <div class="logo">Keywords From Urls</div>
         <nav>
