keywords-grouping.html

--- a/keywords-grouping.html
+++ b/keywords-grouping.html
@@ -657,6 +657,8 @@
     </header>
     <br>
     <br>
+    <div style="display: flex; justify-content: center; align-items: center; height: 100vh; text-align: center;">
+  
   <div class="kg-container">
         <h1 class="kg-title">Keyword Grouping Tool</h1>
         <div class="kg-input-section">
@@ -682,7 +684,9 @@
             </div>
         </div>
     </div>
-
+        </div>
+<div style="display: flex; justify-content: center; align-items: center; height: 100vh; text-align: center;">
+   
        <h2>How to Use the Keyword Grouping Tool</h2>
             <p>The Keyword Grouping Tool helps you organize and categorize keywords extracted from URLs. With this tool, you can group common and unique keywords for better SEO strategy and content management. Follow the steps below to use it:</p>
 
@@ -702,6 +706,9 @@
             <p>Once you have copied the grouped keywords, you can manage them however you wish. Organize them into your content strategy, adjust them based on your SEO needs, or add them to your list of target keywords for optimization.</p>
 
             <h3>6. Enjoy Organized Keyword Data</h3>
+    </div>
+    <div style="display: flex; justify-content: center; align-items: center; height: 100vh; text-align: center;">
+   
             <p>The Keyword Grouping tool saves you time by automating the process of keyword categorization. With grouped keywords at your fingertips, you can now focus on improving your content and boosting your SEO strategy.</p>
        <section id="faq">
             <h4>Frequently Asked Questions</h4>
@@ -725,6 +732,7 @@
                 <p>5. Do you provide API access to your tools?</p>
                 <p>Currently, we do not provide API access, but it is on our roadmap for the future.</p>
             </div>
+    </div>
         </section>
          <script>
         function processData() {
