keywords-grouping.html

--- a/keywords-grouping.html
+++ b/keywords-grouping.html
@@ -547,8 +547,30 @@
             position: relative;
             display: inline-block;
         }
+    center;
+        }
+
+        p {
+            font-size: 18px;
+            line-height: 1.6;
+            margin-bottom: 20px;
+            color: #555;
+            text-align: justify;
+            padding: 0 15px;
+        }
+
+        @media (max-width: 768px) {
+            h2 {
+                font-size: 22px;
+            }
+
+            p {
+                font-size: 16px;
+                padding: 0 10px;
+            }
+        }
     </style>
-    <script type="application/ld+json">
+   <script type="application/ld+json">
 {
   "@context": "https://schema.org",
   "@type": "WebApplication",
@@ -576,57 +598,16 @@
   "potentialAction": {
     "@type": "UseAction",
     "target": "https://keywordsfromurls.com/Keyword-Grouping-Tool.html"
+  },
+  "aggregateRating": {
+    "@type": "AggregateRating",
+    "ratingValue": "4.8",
+    "reviewCount": "250"
   }
 }
-    </script>
-     <script type="application/ld+json">
-    {
-      "@context": "https://schema.org",
-      "@type": "FAQPage",
-      "mainEntity": [
-        {
-          "@type": "Question",
-          "name": "What is your website about?",
-          "acceptedAnswer": {
-            "@type": "Answer",
-            "text": "Our website provides tools and resources for keyword extraction, slug generation, and other SEO-related tasks."
-          }
-        },
-        {
-          "@type": "Question",
-          "name": "How can I use your tools?",
-          "acceptedAnswer": {
-            "@type": "Answer",
-            "text": "You can visit the respective tool pages, input your data, and follow the simple instructions provided."
-          }
-        },
-        {
-          "@type": "Question",
-          "name": "Do you offer free tools?",
-          "acceptedAnswer": {
-            "@type": "Answer",
-            "text": "Yes, most of our tools are free to use, and we continuously update them for better performance."
-          }
-        },
-        {
-          "@type": "Question",
-          "name": "Can I contact you for support?",
-          "acceptedAnswer": {
-            "@type": "Answer",
-            "text": "Yes, you can contact us via the Contact Us page for any queries or suggestions."
-          }
-        },
-        {
-          "@type": "Question",
-          "name": "Do you provide API access to your tools?",
-          "acceptedAnswer": {
-            "@type": "Answer",
-            "text": "Currently, we do not provide API access, but it is on our roadmap for the future."
-          }
-        }
-      ]
-    }
-    </script>
+</script>
+
+  
     </head>
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2996839415438815"
      crossorigin="anonymous"></script>
@@ -685,6 +666,20 @@
         </div>
     </div>
         </div>
+    <h2>Keyword Grouping Tool - Organize Your Keywords Efficiently</h2>
+    <p>Keyword grouping is an essential process in SEO and digital marketing that helps categorize related keywords into meaningful groups. This ensures better content organization and improved search engine rankings.</p>
+
+    <h2>Why is Keyword Grouping Important?</h2>
+    <p>Search engines prioritize well-structured content that aligns with user intent. By grouping similar keywords, you can improve content relevance, create better-targeted landing pages, enhance PPC campaigns, and boost organic rankings.</p>
+
+    <h2>How Does a Keyword Grouping Tool Work?</h2>
+    <p>A keyword grouping tool analyzes and classifies keywords into groups based on similarity. It helps identify common keywords used frequently and unique keywords that stand out in a specific niche.</p>
+
+    <h2>Common vs. Unique Keywords</h2>
+    <p>When analyzing keyword data, it's essential to differentiate between common keywords (frequently appearing across multiple keyword phrases) and unique keywords (specific terms that distinguish a topic).</p>
+
+    <h2>Conclusion</h2>
+    <p>Using a keyword grouping tool streamlines the keyword research process, allowing you to create more targeted content strategies. Whether you're working on SEO, PPC, or content marketing, grouping keywords effectively can significantly impact your success.</p>
 
          <script>
         function processData() {
