keywords-grouping.html

--- a/keywords-grouping.html
+++ b/keywords-grouping.html
@@ -575,7 +575,7 @@
   "@context": "https://schema.org",
   "@type": "WebApplication",
   "name": "Keyword Grouping Tool",
-  "url": "https://keywordsfromurls.com/Keyword-Grouping-Tool.html",
+  "url": "https://keywordsfromurls.com/Keyword-Grouping.html",
   "description": "Effortlessly group related keywords for better SEO strategy. Organize keywords by themes to create more targeted content.",
   "applicationCategory": "SEO Tool",
   "operatingSystem": "All",
