--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Extract Bulk keywords from Bulk URLs [sitemap] in one click Explore a variety of tools designed to simplify blogging tasks and save time for bloggers.">
+    <meta name="description" content="Extract Bulk or single keywrods from Bulk or single urls in one click and explore other tools also which helps to maintain a blog of yours.">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="canonical" href="https://keywordsfromurls.com/">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
@@ -17,7 +17,7 @@
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="192x192" href="/android-chrome-192x192.png">
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
- <title>Get Keywords From Bulk Urls [sitemaps] Just In one Click</title>
+ <title>Keywords from URLs Extractor | Extract URLs or Keywords from Sitemap in One Click</title>
 
     <style>
         /* General Reset */
@@ -380,6 +380,24 @@
                 width: 100%;
             }
         }
+        h2 {
+    font-size: 30px;
+    margin: 40px 0;
+    color: #222;
+    text-align: center;
+    font-weight: bold;
+}
+
+p {
+    font-size: 18px;
+    line-height: 1.8;
+    color: #444;
+    text-align: justify;
+    max-width: 800px;
+    margin: 20px auto;
+    padding: 0 15px;
+}
+
     </style>
   
       <!-- Google tag (gtag.js) --> <script async src="https://www.googletagmanager.com/gtag/js?id=AW-11525935043"></script> <script> window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'AW-11525935043'); </script>
@@ -502,7 +520,7 @@
         <button>Keyword Density</button>
     </a>
 </div>
-
+    </main>
         <div class="container">
             <h1>Keywords from URL Extractor Tool | Keywords Extractor from Sitemap</h1>
         <textarea id="urlInput" placeholder="Paste up to 500 URLs here"></textarea>
@@ -621,13 +639,29 @@
             }
         }
     </script>
-<h2>Extract Keywords from URLs to Organize Your Website Data</h2>
-        <p>When organizing your website data and analyzing the topics covered in your blog, it can be useful to extract keywords from your URLs. Our tool helps you do just that. Heres how it works:</p>
-        <ul>
-            <li>If you enter a URL like https://www.keywordsfromurls.com/, the tool extracts the keyword www.keywordsfromurls.com.</li>
-            <li>For a URL such as https://keywordsfromurls.com/keywordsfromurls/, the keyword extracted would be keywordsfromurls.com</li>
-            <li>If your blog is on Blogger and you provide a URL like https://xyz.blogspot.com/01/01/one-more-second-logic.html, the keyword extracted will be one more second logic.</li>
-        </ul>
+    <br>
+<h2>How Keywords from urls which is extract bulk keywords from bulk urls(from sitemap or anywhere) works ?</h2>
+<p>If you have sitemap urls but confusing how to extract and how to get urls and keywords from that this tools solve the this issue and provide you to bulk keywrods from bulk url upto 500 urls due to maintain speed of the web page </p>
+<p>
+    Managing website data efficiently requires extracting meaningful keywords from URLs. This process helps in categorizing blog content, improving SEO, and structuring website data effectively. Our tool simplifies this task for you.
+</p>
+
+<p>
+    <strong>Example 1:</strong> If you enter a URL like <strong>https://www.keywordsfromurls.com/</strong>, the tool extracts the keyword <strong>www.keywordsfromurls.com</strong>.
+</p>
+
+<p>
+    <strong>Example 2:</strong> A URL such as <strong>https://keywordsfromurls.com/keywordsfromurls/</strong> will be processed to extract <strong>keywordsfromurls.com</strong>.
+</p>
+
+<p>
+    <strong>Example 3:</strong> For Blogger blogs, if you provide a URL like <strong>https://xyz.blogspot.com/01/01/one-more-second-logic.html</strong>, the extracted keyword will be <strong>one more second logic</strong>.
+</p>
+
+<p>
+    Extracting keywords from URLs helps in organizing data efficiently, enhancing website visibility, and ensuring a more structured approach to content management.
+</p>
+<p>So blogger or seo experts this for you with absoulutely free when you required search it or bookmark this site and explore other tools also that also free for you. </p>
         <p>Discover other tools: <a href="keywords-grouping.html">Keyword Grouping Tool</a>, <a href="Slug-Generator.html">Slug Generator</a>, and <a href="Keyword-Density-And-Wordcount-Tool.html">Keyword Density Tool</a>.</p>
 
     </div>
