Slug-Generator.html

--- a/Slug-Generator.html
+++ b/Slug-Generator.html
@@ -297,6 +297,24 @@
                 width: 100%;
             }
         }
+        h2,h3 {
+    font-size: 30px;
+    margin: 40px 0;
+    color: #222;
+    text-align: center;
+    font-weight: bold;
+}
+
+p {
+    font-size: 18px;
+    line-height: 1.8;
+    color: #444;
+    text-align: justify;
+    max-width: 800px;
+    margin: 20px auto;
+    padding: 0 15px;
+}
+
     </style>
    <script type="application/ld+json">
        {
@@ -414,6 +432,26 @@
         </div>
     </main>
     <br>
+        <h3>Importance of Slug for SEO</h3>
+    <p>A well-structured URL slug is crucial for search engine optimization (SEO). It makes your URLs user-friendly, improves readability, and enhances keyword relevance. Search engines prefer clean and meaningful URLs, which increase your website's chances of ranking higher. A properly formatted slug helps users and search engines understand the content of the page at a glance.</p>
+    
+    <h3>How to Use Slug Generator Tool</h3>
+    <p>Follow these simple steps to generate an optimized slug for your URL:</p>
+    <ul>
+        <li>Enter your text into the input box.</li>
+        <li>Select a separator: choose between a hyphen (-) or an underscore (_), depending on your preference.</li>
+        <li>Choose additional options:
+            <ul>
+                <li>Remove dots (.) if you want to eliminate unnecessary punctuation.</li>
+                <li>Remove numbers if you prefer a cleaner slug without digits.</li>
+                <li>You can select both options for a fully optimized slug.</li>
+            </ul>
+        </li>
+        <li>Click on the "Generate Slug" button.</li>
+        <li>Get your optimized slug, ready to be used in your URL.</li>
+    </ul>
+    <p>This tool ensures you have a great, SEO-friendly slug to enhance your website’s visibility and improve user experience.</p>
+<br>
           <section id="faq">
     <div class="container">
         <h2>Frequently Asked Questions (Slug Generator)</h2>
