Slug-Generator.html

--- a/Slug-Generator.html
+++ b/Slug-Generator.html
@@ -297,7 +297,7 @@
                 width: 100%;
             }
         }
-        h2,h3,li,ul {
+        h2,h3 {
     font-size: 30px;
     margin: 40px 0;
     color: #222;
@@ -314,6 +314,22 @@ p {
     margin: 20px auto;
     padding: 0 15px;
 }
+        ul {
+    list-style-type: none;
+    padding: 0;
+    margin: 0 auto;
+    width: fit-content;
+    text-align: left;
+}
+
+ul li {
+    background: #f4f4f4;
+    padding: 10px;
+    margin: 5px 0;
+    border-radius: 5px;
+    text-align: center;
+}
+
 
     </style>
    <script type="application/ld+json">
