Slug-Generator.html

--- a/Slug-Generator.html
+++ b/Slug-Generator.html
@@ -297,39 +297,41 @@
                 width: 100%;
             }
         }
-        h2,h3 {
-    font-size: 30px;
-    margin: 40px 0;
-    color: #222;
-    text-align: center;
-    font-weight: bold;
+   h2, h3, p {
+    width: 80%;
+    max-width: 800px;
 }
 
-p {
-    font-size: 18px;
-    line-height: 1.8;
-    color: #444;
-    text-align: justify;
-    max-width: 800px;
-    margin: 20px auto;
-    padding: 0 15px;
-}
-        ul {
+ul {
     list-style-type: none;
     padding: 0;
-    margin: 0 auto;
-    width: fit-content;
-    text-align: left;
+    margin: 20px auto;
+    width: 80%;
+    max-width: 600px;
+    background: #f9f9f9;
+    padding: 15px;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
 ul li {
-    background: #f4f4f4;
+    background: #ffffff;
     padding: 10px;
     margin: 5px 0;
     border-radius: 5px;
-    text-align: center;
+    text-align: left;
 }
 
+ul ul {
+    padding-left: 20px;
+}
+
+@media (max-width: 600px) {
+    ul {
+        width: 95%;
+        text-align: left;
+    }
+}
 
     </style>
    <script type="application/ld+json">
