Slug-Generator.html

--- a/Slug-Generator.html
+++ b/Slug-Generator.html
@@ -297,40 +297,19 @@
                 width: 100%;
             }
         }
-   h2, h3, p {
-    width: 80%;
-    max-width: 800px;
-}
-
-ul {
-    list-style-type: none;
-    padding: 0;
-    margin: 20px auto;
-    width: 80%;
-    max-width: 600px;
+.slug-steps {
     background: #f9f9f9;
     padding: 15px;
     border-radius: 10px;
+    max-width: 600px;
+    margin: 0 auto;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
-ul li {
-    background: #ffffff;
-    padding: 10px;
+.slug-steps p {
     margin: 5px 0;
-    border-radius: 5px;
+    font-size: 16px;
     text-align: left;
-}
-
-ul ul {
-    padding-left: 20px;
-}
-
-@media (max-width: 600px) {
-    ul {
-        width: 95%;
-        text-align: left;
-    }
 }
 
     </style>
@@ -450,25 +429,19 @@ ul ul {
         </div>
     </main>
     <br>
-        <h3>Importance of Slug for SEO</h3>
-    <p>A well-structured URL slug is crucial for search engine optimization (SEO). It makes your URLs user-friendly, improves readability, and enhances keyword relevance. Search engines prefer clean and meaningful URLs, which increase your website's chances of ranking higher. A properly formatted slug helps users and search engines understand the content of the page at a glance.</p>
-    
-    <h3>How to Use Slug Generator Tool</h3>
-    <p>Follow these simple steps to generate an optimized slug for your URL:</p>
-    <ul>
-        <li>Enter your text into the input box.</li>
-        <li>Select a separator: choose between a hyphen (-) or an underscore (_), depending on your preference.</li>
-        <li>Choose additional options:
-            <ul>
-                <li>Remove dots (.) if you want to eliminate unnecessary punctuation.</li>
-                <li>Remove numbers if you prefer a cleaner slug without digits.</li>
-                <li>You can select both options for a fully optimized slug.</li>
-            </ul>
-        </li>
-        <li>Click on the "Generate Slug" button.</li>
-        <li>Get your optimized slug, ready to be used in your URL.</li>
-    </ul>
-    <p>This tool ensures you have a great, SEO-friendly slug to enhance your website’s visibility and improve user experience.</p>
+       <h3>How to Use Slug Generator Tool</h3>
+<p>Follow these simple steps to generate an optimized slug for your URL:</p>
+<div class="slug-steps">
+    <p><strong>1.</strong> Enter your text into the input box.</p>
+    <p><strong>2.</strong> Select a separator: Choose between a hyphen (-) or an underscore (_), depending on your preference.</p>
+    <p><strong>3.</strong> Choose additional options:</p>
+    <p>- Remove dots (.) if you want to eliminate unnecessary punctuation.</p>
+    <p>- Remove numbers if you prefer a cleaner slug without digits.</p>
+    <p>- You can select both options for a fully optimized slug.</p>
+    <p><strong>4.</strong> Click on the "Generate Slug" button.</p>
+    <p><strong>5.</strong> Get your optimized slug, ready to be used in your URL.</p>
+</div>
+<p>This tool ensures you have a great, SEO-friendly slug to enhance your website’s visibility and improve user experience.</p>
 <br>
           <section id="faq">
     <div class="container">
